# software-eng-ai-2024

./: LICENSE  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
ml_data_pipeline/: .gitignore  Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml  tasks.py
ml_data_pipeline/.github/workflows/: ci..yml
ml_data_pipeline/config/: config_dev.yaml  config_prod.yaml
ml_data_pipeline/docs/: index.html  ml_data_pipeline.html  search.js
ml_data_pipeline/docs/ml_data_pipeline/: config.html  data_loader.html  data_transformer.html  main.html  models.html
ml_data_pipeline/src/ml_data_pipeline/: config.py  core.py  data_loader.py  main.py  train.py
ml_data_pipeline/src/ml_data_pipeline/data_loader/: __init__.py  base_loader.py  csv_loader.py  factory.py  json_loader.py
ml_data_pipeline/src/ml_data_pipeline/data_transformer/: __init__.py  base_transformer.py  factory.py  minmax_scaler_transformer.py  standard_scaler_transformer.py
ml_data_pipeline/src/ml_data_pipeline/endpoints/: health.py  pipeline.py  train.py
ml_data_pipeline/src/ml_data_pipeline/models/: __init__.py  base_model.py  factory.py  linear_model.py  tree_model.py
ml_data_pipeline/tests/: test_data_loader.py  test_data_transformer.py  test_model.py
slides/7-productionizing/examples/: declarative_programming.yaml  functional_programming.py  object_oriented_programming.py  procedural_programming.py
