[tool.poetry]
name = "ml-data-pipeline"
version = "0.1.0"
description = ""
authors = ["najielhachem <nagielhachem@gmail.com>"]
readme = "README.md"
packages = [{ include = "ml_data_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.9.2"

[tool.poetry.scripts]
ml-data-pipeline = "ml_data_pipeline.main:main"

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
