[tool.poetry]
name = "ml-data-pipeline"
version = "0.1.0"
description = ""
authors = ["najielhachem <nagielhachem@gmail.com>"]
readme = "README.md"
packages = [{ include = "ml_data_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"

[tool.poetry.scripts]
ml-data-pipeline = "ml_data_pipeline.main:main"

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"
mypy = "^1.13.0"
ruff = "^0.7.4"
pytest = "^8.3.3"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# mypy configuration
[tool.mypy]
pretty = true
strict = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ruff configuration
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I"] # Specify the types of rules to enforce
ignore = ["E501"]             # Ignore line length warnings

[tool.ruff.format]
quote-style = "double"       # Like Black, use double quotes for strings.
indent-style = "space"       # Like Black, indent with spaces, rather than tabs.
docstring-code-format = true
